--- a/Confidence_Interval.ipynb
+++ b/Confidence_Interval.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Confidence Interval\n",
     "\n",
-    "There are multiple situation where we need to know statitical significance based on Confidence interval. In order to address this issue in following table present some scenarios and approaches and formula to be considered. \n",
+    "There are multiple situation where we need to know Confidence interval. In order to address this issue in following table present 6 differents scenarios and approaches/formula to be considered. \n",
     "\n",
     "Coupled with this table is the code which will allow us to determine easily confince interval using Student t-table as well as Z-table.\n"
    ]
@@ -56,12 +56,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import relevant libraries"
+    "## Import relevant libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,35 +72,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(505)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "- [Great Tutorial- part 1](https://www.youtube.com/watch?v=ZDa-Z5JzLYM)\n",
-    "- [Great Tutorial- part 2](https://www.youtube.com/watch?v=BJ-VvGyQxho)"
+    "## Creating Class, Confidence_interval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,18 +172,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use case"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Seed for reproducibity\n",
+    "np.random.seed(505)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating data (data and data2)\n",
     "data  = np.array([ np.mean(np.random.choice(np.linspace(100, 250, 150), 10)) for i in range(200)])\n",
     "data2 = np.array([ np.mean(np.random.choice(np.linspace(120, 270, 150), 10)) for i in range(20)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,22 +210,48 @@
      "text": [
       "One Data with Known population variance \n",
       "--> aux = Confidence_interval(data, z_half=2, std=30) \n",
-      "--> aux.one_var_known()\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'Confidence_interval' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-a0704524eef6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'One Data with Known population variance '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'--> aux = Confidence_interval(data, z_half=2, std=30) \\n--> aux.one_var_known()'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0maux\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mConfidence_interval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mz_half\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstd\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maux\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mone_var_known\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'\\n\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Confidence_interval' is not defined"
+      "--> aux.one_var_known()\n",
+      "(170.39443984979349, 178.87972122403207) \n",
+      "\n",
+      "\n",
+      "One Data with Unknown population variance \n",
+      "--> aux = Confidence_interval(data, tn_1_half=2, std=30) \n",
+      "--> aux.one_var_unknown()\n",
+      "(172.8831951554691, 176.39096591835644) \n",
+      "\n",
+      "\n",
+      "Two Data Dependent\n",
+      "--> aux =  Confidence_interval(data, data2=data2, tn_1_half=2) \n",
+      "--> aux.two_dependent()\n",
+      "\n",
+      "....\n",
+      "ERROR: diffent data size\n",
+      "...check inputs data\n",
+      "None \n",
+      "\n",
+      "\n",
+      "Two Independent Data Known Variance\n",
+      "--> aux =  Confidence_interval(data, data2=data2, z_half=2, std=4, std2=4) \n",
+      "--> aux.two_known_ind()\n",
+      "(-26.930360934801847, -23.1780283269431) \n",
+      "\n",
+      "\n",
+      "Two Independent Data with variance assumed to be EQUAL\n",
+      "--> aux =  Confidence_interval(data, data2=data2, z_half=2, std=4, std2=4) \n",
+      "--> aux.two_known_ind()\n",
+      "(-33.91539057346099, -16.192998688283957) \n",
+      "\n",
+      "\n",
+      "Two Independent Data with variance assumed to be NOT EQUAL\n",
+      "--> aux =  Confidence_interval(data, data2=data2, tv_half=3) \n",
+      "--> aux.two_var_assumed_not_equal()\n",
+      "(-35.20525123316126, -14.903138028583683)\n"
      ]
     }
    ],
    "source": [
+    "# 6 use case of the class Confidence_interval \n",
+    "\n",
     "print('One Data with Known population variance ')\n",
     "print('--> aux = Confidence_interval(data, z_half=2, std=30) \\n--> aux.one_var_known()')\n",
     "aux = Confidence_interval(data, z_half=2, std=30)\n",
@@ -264,6 +288,13 @@
     "aux =  Confidence_interval(data, data2=data2, tv_half=3)\n",
     "print(aux.two_var_assumed_not_equal())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
